# document-intelligence-refinery

./: .dockerignore  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  app.py  generate_qa.py  pyproject.toml  test_openrouter.py
.github/: copilot-instructions.md
.refinery/: extraction_ledger.jsonl
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2013-E.C-Procurement-information.json  2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2019_Audited_Financial_Statement_Report.json  2020_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.json  2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2017.json  Annual_Report_JUNE-2018.json  Annual_Report_JUNE-2019.json  Annual_Report_JUNE-2020.json  Annual_Report_JUNE-2021.json  Annual_Report_JUNE-2022.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  CBE Annual Report 2006-7 .json  CBE Annual Report 2008-9 .json  CBE Annual Report 2009-10.json  CBE Annual Report 2010-11.json  CBE Annual Report 2014-15.json  Consumer Price Index September 2025.json  Security_Vulnerability_Disclosure_Standard_Procedure_1.json  Security_Vulnerability_Disclosure_Standard_Procedure_2.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
rubric/: extraction_rules.yaml
src/: main.py  settings.py
src/engine/: qa.py  (+3 more)
tests/: test_chunker.py  test_confidence.py  test_router.py  test_triage.py
(+31 files in other folders)
