[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "TRP1 Week 3 - Document Intelligence Refinery (Interim: Phase 0/1/2)"
readme = "README.md"
requires-python=">=3.10,<4.0"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pdfplumber>=0.11.4",
  "pymupdf>=1.24.9",
  "python-dotenv>=1.0.1",
  
]

[project.optional-dependencies]
docling = [
  "docling>=2.0.0"
]
dev = [
  "pytest>=8.2.2",
  "ruff>=0.5.5",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20240808"
]

[project.scripts]
refinery = "src.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
 python = ">=3.10,<4.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]